test(adapter): 完善命令执行回归测试并整理真库测试布局 1. 接通 Elastic 命令拦截器与 Mock 客户端，覆盖 JDBC 参数绑定、请求构造、结果映射及异常处理。 2. 补充 Elastic 查询、CRUD、索引管理、分页、多结果访问及资源清理测试。 3. 补充 Mongo 参数安全、分页选项、写入计数及执行失败中断测试。 4. 将 Milvus 测试客户端适配到 V2 SDK，完善 LIMIT、模板参数、分页重试、取消及更新计数回归测试。 5. 补充 Milvus 向量类型、Schema、主键回传、Hybrid Search、Import、权限管理、TLS 及文档示例测试。 6. 将 Elastic、Mongo 真库测试迁入 dbvisitor-test，合并公共运行辅助类，迁移 Milvus 导入样本及 MinIO 测试依赖。 7. 移除 Elastic、Mongo、Milvus 适配器的 realdb 测试排除配置。